--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,13 +16,14 @@ akka {
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
-      hostname = "127.0.0.1"
+      hostname = "192.168.10.218"
+      port = 19100
     }
   }
 }
 
 remote {
   actor {
-    selectLocationsByParentCode="akka.tcp://rest-api-scala@127.0.0.1:9101/user/selectLocationsByParentCode"
+    selectLocationsByParentCode="akka.tcp://rest-api-scala@192.168.10.117:9101/user/selectLocationsByParentCode"
   }
 }
