--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,6 +17,7 @@ akka {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
       # 调用方host, 如果与服务端不在一台机器上必须填写所在机器host且能与服务端互通
+      # 如果在一台机器上, 可以设置为127.0.0.1, 但端口不要冲突
       hostname = "192.168.10.218"
       # 调用方监听服务端发来消息的端口, 置为0则由系统自动选择端口
       port = 19000
