--- a/src/main/resources/test.conf
+++ b/src/main/resources/test.conf
@@ -18,7 +18,7 @@ akka {
     netty.tcp {
       # 调用方host, 如果与服务端不在一台机器上必须填写所在机器host且能与服务端互通
       # 如果在一台机器上, 可以设置为127.0.0.1, 但端口不要冲突
-      hostname = "192.168.10.117"
+      hostname = "127.0.0.1"
       # 调用方监听服务端发来消息的端口, 置为0则由系统自动选择端口
       port = 19000
     }
@@ -29,7 +29,7 @@ remote {
   actor {
     selectLocationsByParentCode="akka.tcp://rest-api-scala@192.168.10.117:9101/user/selectLocationsByParentCode"
     addUser="akka.tcp://rest-api-scala@192.168.10.117:9101/user/addUser"
-    queryUser="akka.tcp://gyenno-service-module-user@userakkadev.gyenno.com:10001/user/queryUser"
-    parseToken="akka.tcp://gyenno-service-module-user@userakkadev.gyenno.com:10001/user/parseToken"
+    queryUser="akka.tcp://gyenno-service-module-user@userakkatest.gyenno.com:10001/user/queryUser"
+    parseToken="akka.tcp://gyenno-service-module-user@userakkatest.gyenno.com:10001/user/parseToken"
   }
 }
